src/app/game.component.css
.gameBoard {
    max-width: calc(80px * 7);
    max-height: calc(80px * 6);
    background-color: #D1D136; /* Yellow */
    border-radius: 0%;
    border: 1px solid black;
}

button.disc:focus {
    outline: 0;
}

button.disc {
    width: 100%;
    height: 100%;
    background-color: white; /* Default*/
    border-radius: 50%;
    border: 1px solid black;
    text-align: center;
    text-decoration: none;
    display: inline-block;
}

.player1 {
    border: none;
    color: #EA3B20; /* Red */
    font-size: 20px;
}

button.player1, .player1Empty:hover {
    background-color: #EA3B20;
}

.player2 {
    border: none;
    color: #4CAF50; /* Green */
    font-size: 20px;
}

button.player2, .player2Empty:hover {
    background-color: #4CAF50;
}

